--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
       <li>Navigation</li>
       <li><a href="Index.html" class="justforyou">Index</a></li>
-      
+      <li><a href="Aboutme.html" class="justforyou">About me</a></li>
       <li><a href="Education.html" class="justforyou">Education</a></li>
       <li><a href="Hobbies.html" class="justforyou">Hobbies</a></li>
       </ul>
