--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <a href="Hobbies.html">Hobbies</a>
         <h2>Description of my Hobbies</h2>
 
+        <img id="qrCodeImg" src="images/frame.png">
+
       </div>
       
      <aside>
