--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       </div>
     </div>
   </section>
+  <div id="qrcode-container" style="text-align:center; margin:2em 0;">
+    <img id="qrcode" src="image/qr.png" alt="QR Code" style="width:160px; height:160px;">
+    <div>Scan to visit this site!</div>
+  </div>
  <section class="page" id="page1">
   <div class="page1-content">
     <img src="image/rx-78-2.png" alt="Rx-78-2" title="Rx-78-2 Gundam" width="450" height="700">
