--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="alien" type="image/alien.png" href="favicon.ico">
+<!-- get icons from https://www.favicon.cc -->
+<link rel="manifest" href="manifest.json" />
+  <title>History of Gundam</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
@@ -52,7 +57,7 @@
   </section>
   <div id="qrcode-container" style="text-align:center; margin:2em 0;">
     <img id="qrcode" src="image/qr.png" alt="QR Code" style="width:160px; height:160px;">
-    <div>Scan to visit this site!</div>
+    <div id="qrcode-text">Scan to visit this site!</div>
   </div>
  <section class="page" id="page1">
   <div class="page1-content">
