--- a/index.html
+++ b/index.html
@@ -275,25 +275,25 @@
 <div id="quiz">
   <fieldset class="quiz-q" id="q1-fieldset">
     <legend>1. What Full name of UC?</legend>
-    <input type="radio" name="q1" value="Universal Century"> Universal Century
-    <input type="radio" name="q1" value="Unicorn"> Unicorn
-    <input type="radio" name="q1" value="United Century"> United Century
-    <input type="radio" name="q1" value="United Country"> United Country
+    <input type="radio" name="q1" value="Universal Century" id="q1-universal-century"> <label for="q1-universal-century">Universal Century</label>
+    <input type="radio" name="q1" value="Unicorn" id="q1-unicorn"> <label for="q1-unicorn">Unicorn</label>
+    <input type="radio" name="q1" value="United Century" id="q1-united-century"> <label for="q1-united-century">United Century</label>
+    <input type="radio" name="q1" value="United Country" id="q1-united-country"> <label for="q1-united-country">United Country</label>
     <button class="nextBtn" data-next="q2-fieldset" id="nextBtn1">Next</button>
   </fieldset>
   <fieldset class="quiz-q" id="q2-fieldset">
     <legend>2. What is the code name of the first Gundam?</legend>
-    <input type="radio" name="q2" value="Rx-78-2"> Rx-78-2
-    <input type="radio" name="q2" value="Rx-78-3"> Rx-78-3
-    <input type="radio" name="q2" value="Rx-78-4"> Rx-78-4
-    <input type="radio" name="q2" value="Rx-78-1"> Rx-78-1
+    <input type="radio" name="q2" value="Rx-78-2" id="q2-rx78-2"> <label for="q2-rx78-2">Rx-78-2</label>
+    <input type="radio" name="q2" value="Rx-78-3" id="q2-rx78-3"> <label for="q2-rx78-3">Rx-78-3</label>
+    <input type="radio" name="q2" value="Rx-78-4" id="q2-rx78-4"> <label for="q2-rx78-4">Rx-78-4</label>
+    <input type="radio" name="q2" value="Rx-78-1" id="q2-rx78-1"> <label for="q2-rx78-1">Rx-78-1</label>
     <button class="nextBtn" data-next="q3-fieldset" id="nextBtn">Next</button>
   </fieldset>
   <fieldset class="quiz-q" id="q3-fieldset">
     <legend>3. Which timeline is strike gundam from?</legend>
-    <input type="radio" name="q3" value="After Colony"> After Colony
-    <input type="radio" name="q3" value="Cosmic Era"> Cosmic Era
-    <input type="radio" name="q3" value="Universal Century"> Universal Century
+    <input type="radio" name="q3" value="After Colony" id="q3-after-colony"> <label for="q3-after-colony">After Colony</label>
+    <input type="radio" name="q3" value="Cosmic Era" id="q3-cosmic-era"> <label for="q3-cosmic-era">Cosmic Era</label>
+    <input type="radio" name="q3" value="Universal Century" id="q3-universal-century"> <label for="q3-universal-century">Universal Century</label>
     <button id="btnSubmit">Submit</button>
     <button id="restartQuizBtn">Restart Quiz</button>
   </fieldset>
